# robosub_sim_src

./: .gitignore  sync_data_test.py  test_gate_movement.py
comprehensive_data/: metadata.json
controls_6dof/: package.xml  setup.cfg  setup.py
controls_6dof/controls_6dof/: listenkey.py  publish_string.py  publish_vector.py
dave/: .pre-commit-config.yaml
dave/.docker/: jazzy.amd64.dockerfile  jazzy.arm64v8.dockerfile
dave/dave_interfaces/: CMakeLists.txt  package.xml
dave/dave_interfaces/msg/: StratifiedCurrentDatabase.msg  StratifiedCurrentVelocity.msg
dave/dave_interfaces/srv/: GetCurrentModel.srv  SetCurrentDirection.srv  SetCurrentModel.srv  SetCurrentVelocity.srv  SetStratifiedCurrentDirection.srv  SetStratifiedCurrentVelocity.srv
dave/examples/dave_demos/: package.xml
dave/extras/: ardusub-ubuntu-install-local.sh  ardusub-ubuntu-install.sh  ros-jazzy-binary-gz-harmonic-source-install.sh
dave/gazebo/dave_gz_model_plugins/: CMakeLists.txt  package.xml
dave/gazebo/dave_gz_model_plugins/include/dave_gz_model_plugins/: OceanCurrentModelPlugin.hh
dave/gazebo/dave_gz_model_plugins/src/: OceanCurrentModelPlugin.cc
dave/gazebo/dave_gz_sensor_plugins/src/: UnderwaterCamera.cc
dave/gazebo/dave_gz_world_plugins/: CMakeLists.txt  package.xml
dave/gazebo/dave_gz_world_plugins/include/dave_gz_world_plugins/: OceanCurrentWorldPlugin.hh  gauss_markov_process.hh  tidal_oscillation.hh
dave/gazebo/dave_gz_world_plugins/proto/dave_gz_world_plugins_msgs/msgs/: StratifiedCurrentVelocity.proto
dave/gazebo/dave_gz_world_plugins/src/: OceanCurrentWorldPlugin.cc  gauss_markov_process.cc  tidal_oscillation.cc
dave/gazebo/dave_ros_gz_plugins/: CMakeLists.txt  package.xml
dave/gazebo/dave_ros_gz_plugins/include/dave_ros_gz_plugins/: OceanCurrentPlugin.hh
dave/gazebo/dave_ros_gz_plugins/src/: OceanCurrentPlugin.cc
dave/models/dave_object_models/: CMakeLists.txt  package.xml
dave/models/dave_robot_models/: package.xml
dave/models/dave_robot_models/description/rexrov/: model.sdf
dave/models/dave_sensor_models/: package.xml
dave/models/dave_worlds/: package.xml
dave/models/dave_worlds/worlds/: ocean_current_plugin.world  transientOceanCurrentDatabase.csv
high_level_robosub/: package.xml  setup.cfg  setup.py
high_level_robosub/high_level_robosub/helper/: utils.py
high_level_robosub/launch/: dave_sim.launch.py  robosub_config.py  upload_robosub.launch.py
high_level_robosub/urdf/: high_level_robosub.urdf
high_level_robosub/urdf/exact_replica/: exact_robosub.urdf
robosub_data_collection/: README.md  package.xml  setup.py
robosub_data_collection/comprehensive_data/: metadata.json
robosub_data_collection/robosub_data_collection/: __init__.py  comprehensive_data_collector.py  gate_controller.py  simple_camera_collector.py  simple_gate_mover.py
robosub_data_collection/scripts/: data_collector  gate_controller  simple_collector
robosub_worlds/: CMakeLists.txt  package.xml
robosub_worlds/models/gate/: model.config  model.sdf
robosub_worlds/models/gate/meshes/: 8d8b2a97-06ff-4533-aac9-b6a19d617843.mtl  8d8b2a97-06ff-4533-aac9-b6a19d617843.mtl:Zone.Identifier  gateassembly.obj:Zone.Identifier
robosub_worlds/models/pool/: model.config  model.sdf
robosub_worlds/worlds/: ocean_waves.world  pool.world
robosub_wrench_movement/: CMakeLists.txt  package.xml
robosub_wrench_movement/src/: wrench_movement.cpp
rocker/src/rocker/: nvidia_extension.py
