<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>dave_gz_model_plugins</name>
  <version>0.0.0</version>
  <description>Dave Model Plugins</description>
  <maintainer email="gaurav.og.9920@gmail.com">Gaurav Kumar</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dave_gz_world_plugins</depend>
  <depend>dave_ros_gz_plugins</depend>
  <depend>dave_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>protobuf</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>